--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+	<nav class="top-navigation">
+		<div class="content">
+			<img class="logo" src="images/logo.svg" alt="Karma" width="26" />
+		</div>	
+	</nav>
+	<section class="middle">
+		
+	</section>
 	
 </body>
 </html>
