--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 <body>
 
 	<nav class="top-navigation">
-		<div class="content">
-			<img class="logo" src="images/logo.svg" alt="Karma" width="26" />
-		</div>	
+	    <div class="content">
+	        <ul class="links">
+	            <li class="active">Meet Karma</li>
+	            <li>How it Works</li>
+	            <li>Store</li>
+	            <li>Blog</li>
+	            <li>Help</li>
+	            <li>Login</li>
+	        </ul>
+	        <img class="logo" src="images/logo.svg" alt="Logo Image" width="26">
+	    </div>
 	</nav>
-	<section class="middle">
-		
-	</section>
-	
 </body>
 </html>
